tests-build/tests/fail/macros_dead_code.rs
#![deny(dead_code)]

use tests_build::tokio;

#[tokio::main]
async fn f() {}

fn main() {}
